
============ September 26, 2008 ============
- Removed animation (it looks bad).
- Added exception catching.
- Updated Thread Class.
